# SoftMediaPlayer

./: .gitignore  gradle.properties  readme.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jephysoftmediaplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: MediaDecode.cpp  media_controller-lib.cpp
app/src/main/java/com/jephysoftmediaplayer/: PlayerTestActivity.java
app/src/main/java/com/jephysoftmediaplayer/datasource/: DataSource.java  H264FileVideoDataSource.java  VideoDataSource.java
app/src/main/java/com/jephysoftmediaplayer/decode/: DecodeConsumer.java  JNIObject.java  OnDecodeYUVCompeleted.java  OnFrameCallback.java  UVCSoftDecoder.java  VideoStamp.java
app/src/main/java/com/jephysoftmediaplayer/mock/: ByteBufferSendMocker.java  Data.java  MockUVCManager.java
app/src/main/java/com/jephysoftmediaplayer/player/: DecodeController.java  JephyPlayer.java
app/src/main/java/com/jephysoftmediaplayer/util/: CompressedFramePacketBuffer.java  FrameGroup.java  FrameReader.java  FrameUtils.java  FrameWriter.java  YUVFrame.java  YUVFrameBuffer.java
app/src/main/res/layout/: activity_mock_data.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jephysoftmediaplayer/: ExampleUnitTest.java
app/src/test/java/com/jephysoftmediaplayer/util/: CompressedFrameGroupBufferTest.java  FrameUtilsTest.java
gradle/wrapper/: gradle-wrapper.properties
